# shaders

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh
include/: Core.h  Debug.h  Renderer.h  Shader.h  Util.h  Utils.h  stb_image_resize2.h
programs/dither/: main.cpp
programs/dither/rsc/: frag.txt
programs/raytracer/: main.cpp
programs/raytracer/rsc/: raytrace.txt
programs/sand/: main.cpp
programs/sand/rsc/: sand.txt  vert.txt
rsc/: frag.txt
src/: Debug.cpp  Renderer.cpp  Shader.cpp  Utils.cpp  main.cpp
